# ChessTPU

./: CMakeLists.txt  README.md  main.cpp  readme.md
testing/: .gitignore
testing/Chess/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
testing/build-untitled-Kit1-Debug/: .ninja_deps  .ninja_log  .ninja_log.restat  CMakeCache.txt  build.ninja  cmake_install.cmake
testing/build-untitled-Kit1-Debug/.cmake/api/v1/reply/: cache-v2-6385891bc8ce77d91051.json  cmakeFiles-v1-24996493da772c926956.json  codemodel-v2-af7df3110d19a15d6063.json  (+4 more)
testing/build-untitled-Kit1-Debug/.qt/: QtDeploySupport.cmake
testing/build-untitled-Kit1-Debug/untitled_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
testing/build-untitled-Kit1-Debug/untitled_autogen/EWIEGA46WW/: moc_DraggableWidget.cpp  moc_DraggableWidget.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  qrc_res.cpp
testing/build-untitled-Kit1-Debug/untitled_autogen/include/: ui_mainwindow.h
testing/core/ChessClasses/: CMakeLists.txt  ChessLogic.cpp  ChessLogic.h  main.cpp
testing/core/ShessClasses/: CMakeLists.txt  ChessLogic.cpp  ChessLogic.h
testing/simpleGUI/: .gitignore  CMakeLists.txt  DraggableWidget.cpp  SquareWidget.cpp  SquareWidget.h  chessBoard.cpp  chessBoard.h  chessbot.cpp  chessbot.h  game.cpp  game.h  gridpixmapitem.cpp  gridpixmapitem.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow3.ui  res.qrc
testing/untitled/: CMakeLists.txt  DraggableWidget.cpp  DraggableWidget.h  main.cpp  mainwindow.ui  res.qrc
